RESOLVED FIXED129415
r164764 broke the ARM build
https://bugs.webkit.org/show_bug.cgi?id=129415
Summary r164764 broke the ARM build
Mark Hahnenberg
Reported 2014-02-26 18:17:44 PST
Potential fix coming.
Attachments
Patch (1.53 KB, patch)
2014-02-26 18:19 PST, Mark Hahnenberg
no flags
Patch (1.38 KB, patch)
2014-02-26 22:35 PST, Mark Hahnenberg
no flags
proposed fix (2.51 KB, patch)
2014-02-27 04:19 PST, Gabor Rapcsanyi
no flags
Mark Hahnenberg
Comment 1 2014-02-26 18:19:27 PST
Mark Hahnenberg
Comment 2 2014-02-26 18:20:00 PST
(In reply to comment #1) > Created an attachment (id=225335) [details] > Patch Potential fix. I don't have a way to test this patch.
Geoffrey Garen
Comment 3 2014-02-26 19:04:54 PST
Comment on attachment 225335 [details] Patch Is this just a copy of branchPtrWithPatch? I guess I'll r=me to get the build going -- but testing is for great good.
WebKit Commit Bot
Comment 4 2014-02-26 19:35:59 PST
Comment on attachment 225335 [details] Patch Clearing flags on attachment: 225335 Committed r164774: <http://trac.webkit.org/changeset/164774>
WebKit Commit Bot
Comment 5 2014-02-26 19:36:02 PST
All reviewed patches have been landed. Closing bug.
Mark Hahnenberg
Comment 6 2014-02-26 22:35:47 PST
Reopening to attach new patch.
Mark Hahnenberg
Comment 7 2014-02-26 22:35:49 PST
Mark Hahnenberg
Comment 8 2014-02-26 22:36:20 PST
(In reply to comment #7) > Created an attachment (id=225345) [details] > Patch Another fix for ARM traditional build.
Geoffrey Garen
Comment 9 2014-02-27 00:09:10 PST
Comment on attachment 225345 [details] Patch r=me
WebKit Commit Bot
Comment 10 2014-02-27 00:40:27 PST
Comment on attachment 225345 [details] Patch Clearing flags on attachment: 225345 Committed r164781: <http://trac.webkit.org/changeset/164781>
WebKit Commit Bot
Comment 11 2014-02-27 00:40:29 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 12 2014-02-27 01:44:37 PST
Reopen, because the ARM traditional build is still broken. /home/webkitbuildbot/slaves/efl-ARMv7-traditional-official-build/buildslave/efl-linux-armv7-traditional-release/build/Source/JavaScriptCore/assembler/MacroAssemblerARM.h: In member function 'JSC::AbstractMacroAssembler<JSC::ARMAssembler>::DataLabel32 JSC::MacroAssemblerARM::moveWithPatch(JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID)': /home/webkitbuildbot/slaves/efl-ARMv7-traditional-official-build/buildslave/efl-linux-armv7-traditional-release/build/Source/JavaScriptCore/assembler/MacroAssemblerARM.h:1034:92: error: invalid cast from type 'int32_t {aka int}' to type 'JSC::ARMWord {aka unsigned int}'
Gabor Rapcsanyi
Comment 13 2014-02-27 04:19:53 PST
Created attachment 225354 [details] proposed fix Change reinterpret_cast to static_cast in MacroAssemblerARM::moveWithPatch() and add some missing function.
Zoltan Herczeg
Comment 14 2014-02-27 05:23:34 PST
Comment on attachment 225354 [details] proposed fix r=me
WebKit Commit Bot
Comment 15 2014-02-27 05:56:15 PST
Comment on attachment 225354 [details] proposed fix Clearing flags on attachment: 225354 Committed r164799: <http://trac.webkit.org/changeset/164799>
WebKit Commit Bot
Comment 16 2014-02-27 05:56:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.