r164764 broke the ARM build https://bugs.webkit.org/show_bug.cgi?id=129415

Reviewed by Geoffrey Garen.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::branch32WithPatch): Missing this function.


Canonical link: https://commits.webkit.org/147468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164774 268f45cc-cd09-0410-ab3c-d52691b4dbfc